<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090909"
    android:orientation="vertical"
    tools:context=".EditNote">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mod_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F40B0B"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:menu="@menu/delete"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:subtitle="@string/EditNote"
        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:subtitleTextColor="#F4F1F1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mod_toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn"
        android:backgroundTint="#7A7979"
        android:hint="@string/Title"
        android:padding="10dp"
        android:textColorHint="#FDF9F9"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:counterTextColor="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:hintTextColor="#FDF9F9">

        <EditText
            android:id="@+id/modEdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7A7979"
            android:ems="10"
            android:fontFamily="@font/alice"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:minHeight="48dp"
            android:textSize="22sp"
            android:textStyle="normal"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/mod_hv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:scrollIndicators="none"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/mod_Ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <Button
                android:id="@+id/mod_btn_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#03A9F4"
                android:checkable="true"
                android:text="@string/btn_work"
                android:textAllCaps="false"
                android:textColor="#F8F4F4"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:toggleCheckedStateOnClick="true" />

            <Button
                android:id="@+id/mod_btn_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#B4BF48"
                android:checkable="true"
                android:fitsSystemWindows="true"
                android:text="@string/btn_life"
                android:textAllCaps="false"
                android:textColor="#F8F4F4"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:toggleCheckedStateOnClick="true" />

            <Button
                android:id="@+id/mod_btn_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F60505"
                android:checkable="true"
                android:text="@string/btn_family"
                android:textAllCaps="false"
                android:textColor="#F8F4F4"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:toggleCheckedStateOnClick="true" />

            <Button
                android:id="@+id/mod_btn_entermant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#B5A72B"
                android:checkable="true"
                android:scrollIndicators="none"
                android:selectAllOnFocus="false"
                android:text="@string/btn_Entermant"
                android:textAllCaps="false"
                android:textColor="#F8F4F4"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:toggleCheckedStateOnClick="true" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mod_hv"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/mod_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="Type :"
            android:textColor="#F3EFEF"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/mod_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textColor="#FBF3F3"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <MultiAutoCompleteTextView
        android:id="@+id/mod_multy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ln"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/btn"
        android:gravity="start"
        android:minHeight="48dp"
        android:padding="7dp"
        android:textColor="#E8E6E6"
        android:textSize="@dimen/_20ssp"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>